--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ transformers>=4.40.0
 diffusers>=0.27.2
 datasets>=2.18.0
 
+
 # Training and evaluation utilities
 scikit-learn>=1.3.0
 numpy>=1.24.0
@@ -27,7 +28,7 @@ wandb>=0.16.0
 # Text preprocessing
 nltk>=3.8.0
 spacy>=3.7.0
-
+tiktoken
 # Utility & config
 PyYAML>=6.0
 hydra-core>=1.3.2
