--- a/.gitignore
+++ b/.gitignore
@@ -207,3 +207,6 @@ marimo/_lsp/
 __marimo__/
 data/raw/gpt/large-762M-k40.valid.csv
 data/raw/gpt/large-762M-k40.test.csv
+
+#large files
+data/raw/gpt/
