--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,5 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+data/raw/gpt/large-762M-k40.valid.csv
+data/raw/gpt/large-762M-k40.test.csv
