--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,22 @@
 # Core ML frameworks
-torch>=2.0.0
+
 torchvision>=0.15.0
 torchaudio>=2.0.0
-transformers>=4.40.0
+transformers>=4.40.0,<4.55.0
+safetensors>=0.4.1,<0.5
+accelerate>=0.29.3,<0.31
+torch>=2.0.0
+
 diffusers>=0.27.2
 datasets>=2.18.0
 
-
 # Training and evaluation utilities
 scikit-learn>=1.3.0
-numpy>=1.24.0
+numpy<2.0
 pandas>=1.5.0
 matplotlib>=3.7.0
 seaborn>=0.12.2
 tqdm>=4.65.0
-
 
 # Image processing
 opencv-python>=4.8.0
@@ -29,6 +31,7 @@ wandb>=0.16.0
 nltk>=3.8.0
 spacy>=3.7.0
 tiktoken
+
 # Utility & config
 PyYAML>=6.0
 hydra-core>=1.3.2
@@ -42,4 +45,4 @@ foolbox>=3.3.3
 pytorch-lightning>=2.1.0
 imageio>=2.31.0
 ftfy>=6.1.1
-accelerate>=0.30.0
+
