--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ pandas>=1.5.0
 matplotlib>=3.7.0
 seaborn>=0.12.2
 tqdm>=4.65.0
-
+tensorflow tensorflow-gpu
 # Image processing
 opencv-python>=4.8.0
 Pillow>=9.5.0
