--- a/requirements.txt
+++ b/requirements.txt
@@ -46,3 +46,5 @@ pytorch-lightning>=2.1.0
 imageio>=2.31.0
 ftfy>=6.1.1
 
+#api
+fastapi uvicorn torch transformers tensorflow pillow python-multipart
