--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,73 @@
+# ==============================
 # Core ML frameworks
-
+# ==============================
+torch>=2.0.0
 torchvision>=0.15.0
 torchaudio>=2.0.0
 transformers>=4.40.0,<4.55.0
 safetensors>=0.4.1,<0.5
 accelerate>=0.29.3,<0.31
-torch>=2.0.0
-
 diffusers>=0.27.2
 datasets>=2.18.0
 
+# ==============================
 # Training and evaluation utilities
+# ==============================
 scikit-learn>=1.3.0
 numpy<2.0
 pandas>=1.5.0
 matplotlib>=3.7.0
 seaborn>=0.12.2
 tqdm>=4.65.0
-tensorflow tensorflow-gpu
+tensorflow>=2.12.0
+
+
+# ==============================
 # Image processing
+# ==============================
 opencv-python>=4.8.0
 Pillow>=9.5.0
 albumentations>=1.3.1
+imageio>=2.31.0
+ftfy>=6.1.1
 
+# ==============================
 # Logging and experiment tracking
+# ==============================
 tensorboard>=2.12.0
 wandb>=0.16.0
 
+# ==============================
 # Text preprocessing
+# ==============================
 nltk>=3.8.0
 spacy>=3.7.0
-tiktoken
+tiktoken>=0.5.0
 
+# ==============================
 # Utility & config
+# ==============================
 PyYAML>=6.0
 hydra-core>=1.3.2
 python-dotenv>=1.0.0
 
+# ==============================
 # Adversarial evaluation (optional, for robustness testing)
+# ==============================
 textattack>=0.3.8
 foolbox>=3.3.3
 
-# For GANs and stable diffusion (optional visual synthesis)
+# ==============================
+# GANs / Stable Diffusion helpers
+# ==============================
 pytorch-lightning>=2.1.0
-imageio>=2.31.0
-ftfy>=6.1.1
 
-#api
-fastapi uvicorn torch transformers tensorflow pillow python-multipart
+# ==============================
+# API (backend serving)
+# ==============================
+fastapi>=0.110.0
+uvicorn>=0.30.0
+python-multipart>=0.0.9
+
+
+streamlit>=1.35.0
