--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,46 @@
-# ==============================
-# Core ML frameworks
-# ==============================
-torch>=2.0.0
-torchvision>=0.15.0
-torchaudio>=2.0.0
-transformers>=4.40.0,<4.55.0
-safetensors>=0.4.1,<0.5
-accelerate>=0.29.3,<0.31
-diffusers>=0.27.2
-datasets>=2.18.0
+# Core web framework
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+streamlit==1.28.1
 
-# ==============================
-# Training and evaluation utilities
-# ==============================
-scikit-learn>=1.3.0
-numpy<2.0
-pandas>=1.5.0
-matplotlib>=3.7.0
-seaborn>=0.12.2
-tqdm>=4.65.0
-tensorflow>=2.12.0
+# Machine Learning frameworks
+torch==2.2.2
+torchvision==0.17.2
+torchaudio==2.2.2
+tensorflow==2.15.0
 
+# Hugging Face ecosystem
+transformers==4.44.0
+huggingface-hub==0.23.5
+diffusers==0.30.0
+accelerate==0.25.0
+safetensors==0.4.1
 
-# ==============================
 # Image processing
-# ==============================
-opencv-python>=4.8.0
-Pillow>=9.5.0
-albumentations>=1.3.1
-imageio>=2.31.0
-ftfy>=6.1.1
+Pillow==10.1.0
 
-# ==============================
-# Logging and experiment tracking
-# ==============================
-tensorboard>=2.12.0
-wandb>=0.16.0
+# Scientific computing
+numpy==1.24.3
 
-# ==============================
-# Text preprocessing
-# ==============================
-nltk>=3.8.0
-spacy>=3.7.0
-tiktoken>=0.5.0
+# Text processing
+tiktoken==0.5.2
+regex==2023.10.3
 
-# ==============================
-# Utility & config
-# ==============================
-PyYAML>=6.0
-hydra-core>=1.3.2
-python-dotenv>=1.0.0
+# File handling and HTTP requests
+python-multipart==0.0.6
+requests==2.32.5
 
-# ==============================
-# Adversarial evaluation (optional, for robustness testing)
-# ==============================
-textattack>=0.3.8
-foolbox>=3.3.3
+# Utility libraries
+tqdm==4.67.1
+filelock==3.19.1
+fsspec>=2024.0.0
+pyyaml==6.0.2
+typing-extensions==4.14.1
 
-# ==============================
-# GANs / Stable Diffusion helpers
-# ==============================
-pytorch-lightning>=2.1.0
+# Optional: Uncomment for memory-efficient attention (requires CUDA)
+# xformers==0.0.23.post1
 
-# ==============================
-# API (backend serving)
-# ==============================
-fastapi>=0.110.0
-uvicorn>=0.30.0
-python-multipart>=0.0.9
-
-
-streamlit>=1.35.0
-protobuf>=3.20,<4.26
+# Development dependencies (optional)
+# pytest==7.4.3
+# black==23.11.0
+# flake8==6.1.0
