Comment out tokenizers dependency
Comment out tokenizers version in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ huggingface-hub==0.24.6
 transformers==4.44.2
 safetensors==0.4.5
 tiktoken==0.5.2
-tokenizers==0.19.1
+#tokenizers==0.19.1
 
 # FastAPI + server
 fastapi==0.111.0
